RESOLVED FIXED119142
REGRESION(r151091) ASSERTION FAILED: m_readableData || m_writableData
https://bugs.webkit.org/show_bug.cgi?id=119142
Summary REGRESION(r151091) ASSERTION FAILED: m_readableData || m_writableData
Allan Sandfeld Jensen
Reported 2013-07-26 04:36:01 PDT
http/tests/misc/drag-over-iframe-invalid-source.html asserts with 'ASSERTION FAILED: m_readableData || m_writableData'. The problem seems to be that the r151091 refactoring left us with an incorrect assert.
Attachments
Patch (1.35 KB, patch)
2013-07-26 04:38 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-07-26 04:38:28 PDT
Jocelyn Turcotte
Comment 2 2013-07-30 03:19:29 PDT
Arun, what do you intend with this assert?
Arunprasad Rajkumar
Comment 3 2013-07-30 03:24:51 PDT
(In reply to comment #2) > Arun, what do you intend with this assert? Either m_readableData or m_writableData should be valid, and not both. I just moved the legacy to new interface, old code also had this assertion. But anyhow I run all LayoutTests to confirm, Don't know how I missed this :(
Arunprasad Rajkumar
Comment 4 2013-07-30 03:35:18 PDT
(In reply to comment #3) > But anyhow I run all LayoutTests to confirm, Don't know how I missed this :( I remember running all test case before raising for a review, whether that test case is added newly?(atleast after a commit build-bot might have run LayoutTests right?, i'm wondering how it is missed)
Jocelyn Turcotte
Comment 5 2013-07-30 03:38:02 PDT
The assertion in this case is that "at least one of the two" is non-null when readData() is called. So if you just ported it I think we can just remove it then, I was wondering if you were intending that readData shouldn't be called in this case. Thanks.
Arunprasad Rajkumar
Comment 6 2013-07-30 03:41:20 PDT
(In reply to comment #5) > The assertion in this case is that "at least one of the two" is non-null when readData() is called. So if you just ported it I think we can just remove it then, I was wondering if you were intending that readData shouldn't be called in this case. > Thanks. 'ASSERTION FAILED: m_readableData || m_writableData', in this case both were null right? Is it expected?
Allan Sandfeld Jensen
Comment 7 2013-07-30 03:47:26 PDT
(In reply to comment #6) > (In reply to comment #5) > > The assertion in this case is that "at least one of the two" is non-null when readData() is called. So if you just ported it I think we can just remove it then, I was wondering if you were intending that readData shouldn't be called in this case. > > Thanks. > > 'ASSERTION FAILED: m_readableData || m_writableData', in this case both were null right? Is it expected? That is expected. The old assert you ported was a bit longer and tested another value you removed.
WebKit Commit Bot
Comment 8 2013-07-30 04:13:11 PDT
Comment on attachment 207523 [details] Patch Clearing flags on attachment: 207523 Committed r153461: <http://trac.webkit.org/changeset/153461>
WebKit Commit Bot
Comment 9 2013-07-30 04:13:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.